--- a/src/main/resources/view/bill-view.fxml
+++ b/src/main/resources/view/bill-view.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.GenerateBillController">
+<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.GenerateBillController">
    <children>
       <VBox layoutX="11.0" layoutY="11.0" prefHeight="576.0" prefWidth="575.0" style="-fx-border-color: blue; -fx-border-width: 2 2 2 2;" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="11.0">
          <children>
@@ -186,6 +187,14 @@
                   <Insets left="20.0" right="20.0" />
                </VBox.margin>
             </HBox>
+            <Button fx:id="btnEmail" mnemonicParsing="false" onAction="#onSendEmailClick" prefHeight="26.0" prefWidth="101.0" text="Email">
+               <VBox.margin>
+                  <Insets left="450.0" top="20.0" />
+               </VBox.margin>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
          </children>
       </VBox>
    </children>
